--- a/My_Projects/Twitter_Clone/twitter_clone/src/App.scss
+++ b/My_Projects/Twitter_Clone/twitter_clone/src/App.scss
@@ -15,7 +15,9 @@ section,div,p,img,ul,ol,li{
   };
   #left-container{
     display: flex;
-    justify-content: end;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: end;
     border-right:solid 0.01rem grey;
     flex:0 0 33.33%;
     font-family: 'Arimo', sans-serif;
@@ -53,6 +55,17 @@ section,div,p,img,ul,ol,li{
       } 
       //must add hover effect
     }
+    #profile-pill{
+      display: flex;
+      justify-content: space-between;
+      width:50%;
+      height: 3.6rem;
+      border-radius: 10%;
+      font-size: 1rem;
+    }
+    #profile-pill:hover{
+      background-color: rgba(220,220,220,255);
+    }
   
   };
   #middle-container{
@@ -61,17 +74,112 @@ section,div,p,img,ul,ol,li{
   
   };
   #right-container{
+    display: flex;  
+    flex-direction: column;
+    gap: 1rem;
     border:solid green;
     padding-left: 2rem;
     border-left:solid 0.05rem grey;
     flex:0 0 33.33%;
     input{
       background-color: rgba(239,243,244,255);
+      border-width: 0;
       border-radius:3rem;
       width: 50%;
-          height:2.5rem;
+      height:2.5rem;
     }
-    
+      ::placeholder{
+        padding-left: 2rem;
+      }
+
+    #trending-section{
+      display: flex;
+      justify-content: initial;
+      flex-direction: column;
+      width:50%;
+      height: 24rem;
+      background-color: rgba(239,243,244,255);
+      border-radius: 5%;
+      overflow: hidden;
+      
+      .cards-header{
+        display: flex;
+        font-size: 1.3rem;
+        font-weight: bold;
+        padding-left:1rem;
+        flex:0 0 14%;
+        align-items: center;
+      }
+      .cards{
+        padding-left: 1rem;
+        
+        flex:0 0 18%;
+      }
+      .cards:hover{
+        background-color: rgba(220,220,220,255);
+      }
+      .cards-footer{
+        display:flex;
+        align-items: center;
+        flex:0 0 14%;
+        font-size: 1rem;
+        padding-left: 1rem;
+        a{
+        text-decoration: none;
+        color:#53b3f2;
+        }
+      }
+      .cards-footer:hover{
+        background-color: rgba(220,220,220,255);
+        
+      }
+      
+    }
+
+    #rec-follows-section{
+      display: flex;
+      justify-content: initial;
+      flex-direction: column;
+      width:50%;
+      height: 19.92rem;
+      background-color: rgba(239,243,244,255);
+      border-radius: 5%;
+      overflow: hidden;
+
+      .cards-header{
+        display: flex;
+        font-size: 1.3rem;
+        font-weight: bold;
+        padding-left:1rem;
+        flex:0 0 17%;
+        align-items: center;
+      }
+      .cards{
+        padding-left: 1rem;
+        
+        flex:0 0 22%;
+      }
+      .cards:hover{
+        background-color: rgba(220,220,220,255);
+      }
+      .cards-footer{
+        display:flex;
+        align-items: center;
+        flex:0 0 17%;
+        font-size: 1rem;
+        padding-left: 1rem;
+        a{
+        text-decoration: none;
+        color:rgba(48,164,241,255);
+        }
+      }
+      .cards-footer:hover{
+        background-color: rgba(220,220,220,255);
+        
+      }
+    }
+
+   
   };
 }
 
