--- a/My_Projects/Twitter_Clone/twitter_clone/src/App.scss
+++ b/My_Projects/Twitter_Clone/twitter_clone/src/App.scss
@@ -6,6 +6,8 @@ section,div,p,img,ul,ol,li{
 #App {
   display: flex;
   height:100vh;
+  overflow-x: hidden;
+  overflow-y: hidden;
   background-color: white;
   align-items: center;
   font-size: calc(10px + 2vmin);
@@ -14,6 +16,7 @@ section,div,p,img,ul,ol,li{
     height:100%;
   };
   #left-container{
+    border:dotted green;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -26,8 +29,7 @@ section,div,p,img,ul,ol,li{
       display: flex;
       flex-direction: column;
       align-items: start;
-      width: 45%;
-      
+      width: 45%; 
       ul{
         list-style: disc inside;
         #twitter-logo{
@@ -55,13 +57,28 @@ section,div,p,img,ul,ol,li{
       } 
       //must add hover effect
     }
+    #profile-pill-container{
+      width: 45%;
+      display: flex;
+      justify-content: start;
+      padding-bottom: 1rem;
+    }
     #profile-pill{
       display: flex;
-      justify-content: space-between;
-      width:50%;
+      justify-content:space-between;
+      align-items: center;
+      justify-self: start;
+      padding:0.5rem 1rem 0.5rem 1rem;
+      width: 14rem;
       height: 3.6rem;
-      border-radius: 10%;
+      border-radius: 3.6rem;
       font-size: 1rem;
+      overflow: hidden;
+      img{
+        width:3rem;  
+        height:3rem;
+        border-radius: 50%;
+      }
     }
     #profile-pill:hover{
       background-color: rgba(220,220,220,255);
@@ -77,7 +94,6 @@ section,div,p,img,ul,ol,li{
     display: flex;  
     flex-direction: column;
     gap: 1rem;
-    border:solid green;
     padding-left: 2rem;
     border-left:solid 0.05rem grey;
     flex:0 0 33.33%;
@@ -101,6 +117,7 @@ section,div,p,img,ul,ol,li{
       background-color: rgba(239,243,244,255);
       border-radius: 5%;
       overflow: hidden;
+      margin-top: 4rem;
       
       .cards-header{
         display: flex;
