--- a/My_Projects/Twitter_Clone/twitter_clone/src/App.scss
+++ b/My_Projects/Twitter_Clone/twitter_clone/src/App.scss
@@ -3,6 +3,7 @@ section,div,p,img,ul,ol,li{
   padding:0;
 }
 
+
 #App {
   display: flex;
   height:100vh;
@@ -97,16 +98,18 @@ section,div,p,img,ul,ol,li{
     padding-left: 2rem;
     border-left:solid 0.05rem grey;
     flex:0 0 33.33%;
+    
     input{
       background-color: rgba(239,243,244,255);
       border-width: 0;
       border-radius:3rem;
       width: 50%;
       height:2.5rem;
+      text-indent:1rem;
     }
-      ::placeholder{
+      /*::placeholder{
         padding-left: 2rem;
-      }
+      }*/
 
     #trending-section{
       display: flex;
