started implementing embed timeline..wip

--- a/My_Projects/Twitter_Clone/twitter_clone/src/App.scss
+++ b/My_Projects/Twitter_Clone/twitter_clone/src/App.scss
@@ -89,6 +89,10 @@ section,div,p,img,ul,ol,li{
   #middle-container{
   
     flex:0 0 33.33%;
+
+    #timeline-div{
+      height: 8rem;
+    }
   
   };
   #right-container{
