-m" Revert "added the search icon to search box,and thumbs up icon to tweet button" "
This reverts commit 6ffecf8e27095ed345b9c3a469f0385a92f03b71.

--- a/My_Projects/Twitter_Clone/twitter_clone/src/App.scss
+++ b/My_Projects/Twitter_Clone/twitter_clone/src/App.scss
@@ -111,18 +111,16 @@ section,div,p,img,ul,ol,li{
     padding-left: 2rem;
     border-left:solid 0.05rem grey;
     flex:0 0 33.33%;
-    
     input{
       background-color: rgba(239,243,244,255);
       border-width: 0;
       border-radius:3rem;
       width: 50%;
       height:2.5rem;
-      text-indent:1rem;
     }
-      /*::placeholder{
+      ::placeholder{
         padding-left: 2rem;
-      }*/
+      }
 
     #trending-section{
       display: flex;
