--- a/My_Projects/Twitter_Clone/twitter-clone/src/App.scss
+++ b/My_Projects/Twitter_Clone/twitter-clone/src/App.scss
@@ -29,6 +29,7 @@ section,div,p,img,ul,ol,li{
       flex-direction: column;
       align-items: start;
       width: 43.5%; 
+      text-decoration: none;
       ul{
         list-style: none;
         //list-style-image:url("birdhouse.png");
@@ -45,9 +46,22 @@ section,div,p,img,ul,ol,li{
           margin-bottom: 1.66rem;
           
         }
-        li{
-          margin-bottom: 2.24rem;
+        a{
+          text-decoration: none;
+          color: initial;
+          li{
+            margin-bottom: 0rem;
+            padding: 1rem 1.5rem 1rem 1.5rem;
+            
+          }
+          li:hover{
+            background-color: rgba(220,220,220,0.6);
+            border-radius: 2rem;
+            width: max-content;
+            padding: 1rem 1.5rem 1rem 1.5rem;
+          }
         }
+        
         button{
           align-self:start;
           font-weight: bold;
@@ -58,7 +72,10 @@ section,div,p,img,ul,ol,li{
           color:white;
           background-color: #1d9bf0;
           border: none;
-         
+          margin-top: 1.5rem;
+        }
+        button:hover{
+          background-color: #1d8ad3;
         }
       } 
       //must add hover effect
@@ -165,12 +182,6 @@ section,div,p,img,ul,ol,li{
           margin-right: 1rem;
         }
     }
-      
-      .twitter-timeline{
-        overflow-y: scroll;
-        margin-top: 10rem;
-        border: solid blue;
-      }
     }
   };
 
