started implementing one var to control all color changes from onclick event, setup webconfig..vars located in variables.modules.scss file

--- a/My_Projects/random-quote-gen/src/App.scss
+++ b/My_Projects/random-quote-gen/src/App.scss
@@ -1,13 +1,16 @@
+
+
 .App {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: bisque;
+  background-color: beige;
   height: 100vh;
 
   //PRESENTATIONAL
   #wrapper{
+    opacity: 1;
     #quote-box{
       display: flex;
       flex-direction: column;
@@ -62,7 +65,9 @@
 }
 
 
-
+.color-change{
+  background-color:rgb(204, 207, 53)
+}
 
 .App-logo {
   height: 40vmin;
