the july 21st commit split my app's files between two projects..had to revert it to july 20th commit,nothing was lost there......also added the typescript demo file that i was working on the morning of july 22

--- a/My_Projects/random-quote-gen/src/App.scss
+++ b/My_Projects/random-quote-gen/src/App.scss
@@ -1,16 +1,13 @@
-
-
 .App {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: beige;
+  background-color: bisque;
   height: 100vh;
 
   //PRESENTATIONAL
   #wrapper{
-    opacity: 1;
     #quote-box{
       display: flex;
       flex-direction: column;
@@ -65,9 +62,7 @@
 }
 
 
-.color-change{
-  background-color:rgb(204, 207, 53)
-}
+
 
 .App-logo {
   height: 40vmin;
