added some classes to help with color sync

--- a/My_Projects/random-quote-gen/src/App.scss
+++ b/My_Projects/random-quote-gen/src/App.scss
@@ -1,6 +1,12 @@
 @use './variables';
+$bgcolor:'background-color';
 
-
+.bg-sync{
+ // $bgcolor:green;
+}
+.txt-sync{
+  //color:green;
+}
 
 .App {
   display: flex;
