asigne color change status to a redux state in store...updates are being dispatched....need to fix issue with reading states(combined reducers)

--- a/My_Projects/random-quote-gen/src/App.scss
+++ b/My_Projects/random-quote-gen/src/App.scss
@@ -2,6 +2,7 @@
 $bgcolor:'background-color';
 
 .App {
+  background-color: variables.$theme-color;
   display: flex;
   justify-content: center;
   align-items: center;
