worked on the added all buttons+styling to the project

--- a/My_Projects/Drum-machine/src/App.scss
+++ b/My_Projects/Drum-machine/src/App.scss
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.container{
+  padding: 0;
+  margin:0;
+}
+.container-fluid{
+  padding: 0;
+  margin:0;
+}
