--- a/My_Projects/random-quote-gen/src/variables.css
+++ b/My_Projects/random-quote-gen/src/variables.css
@@ -1,1 +1,1 @@
-:export{redColor:red;themeColor:green}/*# sourceMappingURL=variables.css.map */
+.App{--theme-color:rgb(255, 186, 58)}:export{themeColor:var(--theme-color)}/*# sourceMappingURL=variables.css.map */
