worked on creating json object with formData

--- a/Main_Folder/MY_PROJECTS/form_Api_Node/client/src/styling/Inputs.scss
+++ b/Main_Folder/MY_PROJECTS/form_Api_Node/client/src/styling/Inputs.scss
@@ -4,6 +4,8 @@
     display:flex;
     flex-direction: column;
     justify-content: space-between;
+    border: solid red;
+    height:max-content
 
 }
 
