--- a/Main_Folder/MY_PROJECTS/form_Api_Node/client/src/styling/Inputs.scss
+++ b/Main_Folder/MY_PROJECTS/form_Api_Node/client/src/styling/Inputs.scss
@@ -4,13 +4,14 @@
     display:flex;
     flex-direction: column;
     justify-content: space-between;
-    border: solid red;
+    //border: solid red;
     height:max-content
 
 }
 
 .inputs{
     margin-bottom: 0.2rem;
+    border: black solid;
 }
 
 .submits{
