--- a/Main_Folder/MY_PROJECTS/calculator/src/redux/components/Container.css
+++ b/Main_Folder/MY_PROJECTS/calculator/src/redux/components/Container.css
@@ -1,1 +1,3 @@
-.container{border:red solid}/*# sourceMappingURL=Container.css.map */
+.container {
+  border: red solid;
+}/*# sourceMappingURL=Container.css.map */
