--- a/Main_Folder/MY_PROJECTS/drum-machine/src/buttons.css
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/buttons.css
@@ -1,12 +1,1 @@
-.container-fluid {
-  border: solid red;
-}
-
-.btn {
-  border-radius: 1%;
-}
-
-#pad {
-  margin: 0;
-  padding: 0;
-}/*# sourceMappingURL=buttons.css.map */
+.container-fluid{border:solid red}.btn{border-radius:1%}#pad{margin:0;padding:0}/*# sourceMappingURL=buttons.css.map */
