--- a/Main_Folder/MY_PROJECTS/form_Api_Node/client/src/styling/Form.css
+++ b/Main_Folder/MY_PROJECTS/form_Api_Node/client/src/styling/Form.css
@@ -1,5 +1,1 @@
-#form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}/*# sourceMappingURL=Form.css.map */
+#form{display:flex;flex-direction:column;align-items:center}/*# sourceMappingURL=Form.css.map */
