--- a/Main_Folder/MY_PROJECTS/calculator/src/redux/components/Container.css
+++ b/Main_Folder/MY_PROJECTS/calculator/src/redux/components/Container.css
@@ -1,3 +1,1 @@
-.container {
-  border: red solid;
-}/*# sourceMappingURL=Container.css.map */
+.container{border:red solid}/*# sourceMappingURL=Container.css.map */
