--- a/Main_Folder/MY_PROJECTS/rock_paper_scissors/styles.css
+++ b/Main_Folder/MY_PROJECTS/rock_paper_scissors/styles.css
@@ -1,54 +1,1 @@
-html, body, section, div, header, img, footer, p, h1, h2, button {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  background-color: green;
-  overflow-y: auto;
-}
-
-h1 {
-  background-color: blue;
-  text-align: center;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-#main-section {
-  display: flex;
-  align-items: center;
-  background-color: red;
-  height: 100vh;
-  border: dotted blue;
-}
-#main-section #game-row {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border: solid yellow;
-}
-#main-section #game-row img {
-  height: 30rem;
-  flex: 0 0 40%;
-  border: solid 1px white;
-}
-#main-section #game-row #buttons {
-  border: solid green;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  flex: 0 0 1fr;
-}
-#main-section #game-row #buttons button {
-  font-size: 1.5vw;
-  padding: 0.5rem;
-  border-radius: 10%;
-}
-#main-section #game-row #buttons div {
-  margin-top: 1rem;
-  display: flex;
-  justify-content: space-evenly;
-}/*# sourceMappingURL=styles.css.map */
+html,body,section,div,header,img,footer,p,h1,h2,button{margin:0;padding:0}body{background-color:green;overflow-y:auto}h1{background-color:blue;text-align:center;height:fit-content}#main-section{display:flex;align-items:center;background-color:red;height:100vh;border:dotted blue}#main-section #game-row{width:100%;display:flex;justify-content:space-between;align-items:center;border:solid #ff0}#main-section #game-row img{height:30rem;flex:0 0 40%;border:solid 1px #fff}#main-section #game-row #buttons{border:solid green;display:flex;flex-direction:column;justify-content:space-evenly;flex:0 0 1fr}#main-section #game-row #buttons button{font-size:1.5vw;padding:.5rem;border-radius:10%}#main-section #game-row #buttons div{margin-top:1rem;display:flex;justify-content:space-evenly}/*# sourceMappingURL=styles.css.map */
