added margin and box-shadows to pads

--- a/Main_Folder/MY_PROJECTS/drum-machine/src/buttons.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/buttons.scss
@@ -4,7 +4,9 @@
 }
 
 .btn{
-    border-radius: 1%;
+    border-radius: 10%;
+    height: 5rem;
+    width: 5rem;
 }
 
 #pad{
@@ -12,3 +14,4 @@
     margin:0;
     padding:0;
 }
+
