--- a/Main_Folder/MY_PROJECTS/drum-machine/src/buttons.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/buttons.scss
@@ -1,6 +1,6 @@
 .container-fluid{
     //width:15rem;
-    border:solid red;
+    //border:solid red;
 }
 
 .btn{
@@ -14,4 +14,5 @@
     margin:0;
     padding:0;
 }
+
 
