added volume to display & tweaked sizing/position of buttons

--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -46,11 +46,11 @@
   margin:0;
 }
 
-#id{
+/*#id{
   display: grid;
   grid-template-areas: 
   "toggle . . . . slider"
   "display display display display display slider"
   ". . . . . slider";
-}
+}*/
 
