fixed display element centering issue

--- a/Main_Folder/MY_PROJECTS/drum-machine/src/buttons.css
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/buttons.css
@@ -1,1 +1,1 @@
-.container-fluid{border:solid red}.btn{border-radius:1%}#pad{margin:0;padding:0}/*# sourceMappingURL=buttons.css.map */
+.btn{border-radius:10%;height:5rem;width:5rem}#pad{margin:0;padding:0}/*# sourceMappingURL=buttons.css.map */
