--- a/Main_Folder/MY_PROJECTS/random-quote-gen/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/random-quote-gen/src/App.scss
@@ -1,4 +1,5 @@
 @use './variables';
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,500');
 
 
 .App {
@@ -8,6 +9,7 @@
   text-align: center;
   background-color: variables.$theme-color;
   height: 100vh;
+  font-family: 'Raleway';
 
   //PRESENTATIONAL  
   #wrapper{
@@ -31,6 +33,8 @@
         min-width: 80%;
         max-width: 80%;
         margin-top:2.063rem;
+        font-size: 30px;
+        font-weight: 500;
         //border:dotted variables.$red-color;
         color:variables.$theme-color;
       }
@@ -57,25 +61,24 @@
         div{
           display: flex;
           justify-content: start;
-          #tweet-quote{
-            button{
-              color:white;
-              background-color:variables.$theme-color;
-              margin-right:0.18rem;
-            }
+          .bg-sync{
+            width: 40px;
+            height:38px;
+            border:none;
+            border-radius: 10%;
+            color:white;
+            background-color:variables.$theme-color;
+            margin-right: 5px;
           }
-
-            #tumblr-quote{
-              button{
-                color:white;
-                background-color:variables.$theme-color;
-              }
-            }
           }
       }
         #new-quote{
           justify-self: end;
+          width: 101px;
+          height: 38px;
           color:white;
+          border-radius: 5%;
+          border: none;
           background-color:variables.$theme-color;;
         }
       }
