--- a/Main_Folder/MY_PROJECTS/timer/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/timer/src/App.scss
@@ -66,6 +66,7 @@
      margin: auto;
      margin-top: 20px;
      margin-bottom: 20px;
+     margin-left: 603px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -76,7 +77,7 @@
     border-radius: 50%;
     border-style: solid;
     border-width: 2px;
-    background-color: red;
+    // background-color: red;
     grid-area: area1;
     /*border-image:linear-gradient(red,yellow);
     border-image-slice: 30%;*/
@@ -92,23 +93,4 @@
     color: white;
     background-image: linear-gradient(red, yellow)
   }
-}
-
-#test-area {
-  border: solid yellow;
-  font-size: 1rem;
-  display: grid;
-  width: 3rem;
-  height: 3rem;
-  grid-template-areas:
-    "ar1 ar1 ar2"
-    "ar3 ar3 ar2"
-    "ar4 ar4 ar4";
-  grid-template-rows: 33% 33% 33%;
-  grid-template-columns: 33% 33% 33%;
-}
-
-.test {
-  // width: 1rem;
-  // height: 1rem;
 }
