--- a/Main_Folder/MY_PROJECTS/timer/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/timer/src/App.scss
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   color: white;
- 
+
   height: 100vh;
   //border:solid red;
   // padding-top: 20px;
@@ -10,7 +10,13 @@
   max-height: 100vh;
 
   #container {
-    padding-top: 40px;
+    display: grid;
+    grid-template-areas:
+    ". circle circle ."
+    ". circle circle ."
+    "session circle circle break"
+    "session circle circle break" ;
+    //padding-top: 40px;
     width: 100%;
     height: 100%;
     max-height: 100%;
@@ -26,27 +32,51 @@
 
   //background-image: linear-gradient(blue, white);
   .labels {
+    font-size: 20px;
     margin-bottom: 15px;
+    //border:solid red;
+    grid-area: label;
   }
 
   .settings-buttons {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    //margin-top: 10px;
+    //margin-bottom: 10px;
     width: 70px;
     height: 70px;
   }
 
   .start-refresh-buttons {
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
   }
+
+  .time-modifiers {
+    //border: solid yellow;
+    width: 300px;
+    margin: auto;
+    display: grid;
+    grid-template-areas:
+      "label label label"
+      "increment value decrement";
+  }
+  .increment-buttons{
+    grid-area: increment;
+  }
+  .length-values{
+    grid-area: value;
+    font-size: 50px;
+  }
+  .decrement-buttons{
+    grid-area: decrement;
+  }
+  
 
   #timed-buttons {
     // grid-area: area2;
     border: solid yellow;
-    position: absolute;
+    //position: absolute;
     //left: 0;
-    right:5%;
+    right: 5%;
     display: 'flex';
     flex-direction: row;
     justify-content: 'space-evenly';
@@ -59,21 +89,25 @@
   }
 
   #start-pause-refresh-buttons {
-    width: 200px;
+    /*width: 200px;
     //border: solid purple;
-    position: absolute;
-    left:0;
+    //position: absolute;
+    left: 0;
     right: 0;
     margin: auto;
-    margin-top: 540px;
+    //margin-top: 540px;
     display: flex;
     grid-area: area3;
     justify-content: space-evenly;
-    //border:solid white
+    //border:solid white*/
+    display: flex;
+    justify-content: space-evenly;
+    border: solid black;
+    min-width: 200px;
   }
 
   #circle {
-    position: absolute;
+    //position: absolute;
     left: 0;
     right: 0;
     margin: auto;
@@ -82,16 +116,22 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 500px;
-    height: 500px;
+    width: 850px;
+    height: 850px;
     font-size: 50px;
     border-radius: 50%;
     border-style: solid;
     border-width: 2px;
     // background-color: red;
-    grid-area: area1;
+    grid-area: circle;
     /*border-image:linear-gradient(red,yellow);
     border-image-slice: 30%;*/
+  }
+  #session{
+    grid-area: session;
+  }
+  #break{
+    grid-area: break;
   }
 
   button {
