--- a/Main_Folder/MY_PROJECTS/timer/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/timer/src/App.scss
@@ -1,53 +1,60 @@
+/*{
+  -display/layout
+  -position
+  -margin
+  -border
+  -dimensions
+  -padding
+  -background-colors
+  -typography
+  -color
+}*/
+
 .App {
-  text-align: center;
-  color:white;
-  background-color: yellow;
   height: 100vh;
-  //border:solid red;
-  // padding-top: 20px;
-  //margin-top: 0;
   min-height: 100vh;
   max-height: 100vh;
 
+  //border:solid red;
+
+  background-color: yellow;
+  text-align: center;
+  color: white;
+
   #container {
     display: grid;
-    /*grid-template-columns: 1fr 2fr 1fr  ;
-    grid-template-rows: 1fr 1fr 1fr;*/
     grid-template-areas:
-    ". circle ."
-    ". circle ."
-    //"session circle break"
-    "session circle break" ;
-    //padding-top: 40px;
+      ". circle ."
+      ". circle ."
+      "session circle break";
+
     width: 100%;
     height: 100%;
     max-width: 100%;
     max-height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+
     background-color: rgb(0, 50, 75);
-    //background-image: linear-gradient(darkblue, darkgrey);
-    /*display: grid;
-    grid-template-areas:
-      "area1 area2"
-      "area3 area3";
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 5fr 1fr;*/
+  }
+  .labels {
+    margin-bottom: 15px;
+
+    //border:solid red;
+
+    font-size: 2rem;
   }
 
-  //background-image: linear-gradient(blue, white);
-  .labels {
-    font-size: 2rem;
-    margin-bottom: 15px;
-    //border:solid red;
-    grid-area: label;
-  }
-  
-  .fa-pause,.fa-play{
+  .fa-pause,
+  .fa-play {
     max-width: 100%;
     max-height: 100%;
   }
+
   .settings-buttons {
     //margin-top: 10px;
     //margin-bottom: 10px;
+
     width: 90px;
     height: 90px;
     min-width: 20%;
@@ -56,42 +63,46 @@
   .start-refresh-buttons {
     min-width: 30%;
     height: max-content;
-    //background-color: black;
     aspect-ratio: 1 / 1;
+
+    //background-color: black;
   }
 
   .time-modifiers {
-    //border: solid yellow;
-    width: 300px;
-    margin: auto;
     display: grid;
     grid-template-areas:
       "label label label"
       "increment value decrement";
+
+    margin: auto;
+
+    //border: solid yellow;
+
+    width: 300px;
   }
-  .increment-buttons{
+
+  .increment-buttons {
     grid-area: increment;
   }
-  .length-values{
+
+  .length-values {
     grid-area: value;
+
     font-size: 50px;
   }
-  .decrement-buttons{
+
+  .decrement-buttons {
     grid-area: decrement;
   }
-  
 
   #timed-buttons {
-    // grid-area: area2;
-    border: solid yellow;
-    //position: absolute;
-    //left: 0;
-    right: 5%;
-    display: 'flex';
+    display: "flex";
     flex-direction: row;
-    justify-content: 'space-evenly';
-    // width: '200px';
-    // justify-self: 'center';
+    justify-content: "space-evenly";
+
+    right: 5%;
+
+    border: solid yellow;
   }
 
   #time-left {
@@ -99,112 +110,115 @@
   }
 
   #start-pause-refresh-buttons {
-    /*width: 200px;
-    //border: solid purple;
-    left: 0;
-    right: 0;
-    margin: auto;
-    //margin-top: 540px;
     display: flex;
-    grid-area: area3;
     justify-content: space-evenly;
-    //border:solid white*/
+
     position: relative;
-    display: flex;
-    justify-content: space-evenly;
-    //border: solid black;
-    min-width: 45%;
+
     bottom: -12%;
-    
-    
+
+    //border: solid black;
+
+    min-width: 45%;
   }
 
   #circle {
-    position: relative;
-    left: 0;
-    right: 0;
-    margin: auto;
-    padding:none ;
-    // margin-top: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 50vw;
-    //height: 50vw;
-    font-size: 3vw;
-    border-radius: 50%;
-    border-style: solid;
-    border-width: 2px;
-    aspect-ratio: 1 / 1;
-    // background-color: red;
+
+    position: relative;
     grid-area: circle;
-    /*border-image:linear-gradient(red,yellow);
-    border-image-slice: 30%;*/
+
+    margin: auto;
+    left: 0;
+    right: 0;
+
+    border: 2px solid;
+    border-radius: 50%;
+
+    width: 50vw;
+    aspect-ratio: 1 / 1;
+
+    padding: none;
+
+    font-size: 3vw;
   }
-  #session{
+
+  #session {
     grid-area: session;
+
+    border: solid salmon;
+
     max-width: 100%;
     max-height: 100%;
-    //width: max-content;
-    border:solid salmon;
   }
-  #timer-label{
-    //position: absolute;
-    //align-self: flex-start;
+
+  #timer-label {
     margin-left: -45%;
     margin-bottom: -2%;
-    font-weight: 100;
-    /*top: 10%;
-    left:20%;*/
-    //margin-bottom: 1%;
+
     //border: solid wheat;
+
+    font-weight: 100;
   }
-  #time-left{
-    font-size: 500%;
+
+  #time-left {
     // border:solid yellow;
+
     padding: 0;
+
+    font-size: 500%;
     line-height: 85%;
-    //margin-bottom: 5%;
   }
-  
-  #break{
+
+  #break {
     grid-area: break;
+
+    border: solid salmon;
+
     max-width: 100%;
     max-height: 100%;
-    //width: fit-content;
-    border:solid salmon;
   }
+
   button {
     margin: auto;
+
+    border-radius: 50%;
+    border-width: 0;
+    box-shadow: 1px 1px 5px 1px white, -1px -1px 5px, white, -1px 1px 5px white,
+      1px -1px 5px white;
+
     width: 36px;
     height: 36px;
     max-width: 100%;
-    border-radius: 50%;
-    border-width: 0;
-    box-shadow: 1px 1px 5px 1px white, -1px -1px 5px white, -1px 1px 5px white, 1px -1px 5px white;
-    color: white;
+
     background-color: darkblue;
-    //background-image: linear-gradient(red, yellow)
+
+    color: white;
   }
-  @media screen and (max-width:500px) {
+
+  @media screen and (max-width: 500px) {
     // for mobile phones
-    #container{
-      grid-template-areas: 
-      "circle"
-      "circle"
-      "session"
-      "break";
-      //background-color: red;
+    #container {
+      grid-template-areas:
+        "circle"
+        "circle"
+        "session"
+        "break";
     }
-    #circle{
+
+    #circle {
       width: 80%;
       aspect-ratio: 1 / 1;
-      #timer-label{
+
+      #timer-label {
         font-size: 4vw;
       }
     }
-    #start-pause-refresh-buttons{
+
+    #start-pause-refresh-buttons {
       min-width: 50%;
       max-width: 50%;
     }
