created small version of dynamic time circle + overlay+ started setting up strokeDasharray attribute for visual time tracking

--- a/Main_Folder/MY_PROJECTS/timer/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/timer/src/App.scss
@@ -232,6 +232,9 @@
 
     color: rgb(255, 255, 255);
   }
+  #dynamic-timer-circle-svg{
+  
+  }
 
   // .................MEDIA QUERIES..............................
   @media screen and (max-width: 576px) {
